# pd-plugins

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  THANKS  configure  configure.ac  reconf
autom4te.cache/: output.0  requests  traces.0
doc/: Makefile.am  Makefile.in
m4/: Makefile.am  Makefile.in
plugins/: Makefile.am  Makefile.common  Makefile.in
plugins/drivers/usb/: usb_sys.h  usbport.c
plugins/drivers/usb/sys/linux/: api.c
plugins/fex/: Makefile.am
plugins/fex/centroid~/: Makefile  centroid~-help.pd  centroid~.c  centroid~.pd_linux
plugins/fex/centroid~/simulation/: centroid.m  centroid_driver.octave
plugins/fex/cepstrum~/: Makefile
plugins/fex/cepstrum~/simulation/: rcepstrum.m  rcepstrum_driver.octave
plugins/fex/integrators/: .gdbinit  Makefile  integrator-help.pd  integrator.c  integrators.c  integrators.pd_linux  integrator~-help.pd  integrator~.c
plugins/fex/ltas~/: .gdbinit  Makefile  ltas~-help.pd  ltas~.c  ltas~.pd_linux
plugins/pedagogy/: Makefile.am
plugins/pedagogy/mul~/: Makefile  mul~.c  mul~.pd
plugins/pedagogy/simple_counter/: Makefile  TODO  simple_counter.c  simple_counter.pd
plugins/routing/: Makefile.am
plugins/routing/mspmatrix~/: .gdbinit  Makefile  mspmatrix~.c
plugins/wings/: Makefile.am
plugins/wings/hanning~/simulation/: hanning.m  hanning_driver.octave
plugins/wings/window~/: Makefile  window~.c  window~.pd_linux
