#
# $Id: Makefile.am 40 2006-03-23 08:52:44Z nicb $
#
# Copyright (C) 2006 Nicola Bernardini, Marco Braggion, Amalia De Goetzen
#                    <studenti-nerds@lists.sme-ccppd.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# Install m4 macros in this directory
m4datadir = $(datadir)/aclocal

# List your m4 macros here
m4macros = 

# The following is boilerplate
m4data_DATA = $(m4macros) 
EXTRA_DIST = $(m4data_DATA) 

